--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -1,5 +1,5 @@
 section {
-  margin: 0 25% 0 25%;
+  margin: 0 25% 0.375rem 25%;
 }
 
 section header {
@@ -7,14 +7,58 @@ section header {
   flex-flow: row wrap;
   justify-content: space-between;
 }
-section header .estatisticas {
+section header .estatistica {
   display: flex;
   flex-flow: row wrap;
+  gap: 0.625rem;
 }
 
 section header .estatistica figure img {
   width: 3.75rem;
 }
+section header .estatistica .temp {
+  display: flex;
+  flex-flow: row wrap;
+}
+section header .estatistica .temp .ativo {
+  color: #e8eaed;
+}
+section header .estatistica .temp h1 {
+  color: #e8eaed;
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 3.75rem;
+}
+section header .estatistica .temp sup {
+  color: #9aa0a6;
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.2rem;
+  line-height: 1.5rem;
+  margin: 0.375rem 0 0 0.375rem;
+  cursor: pointer;
+}
+section header .estatistica .temp div {
+  margin: 0.375rem 0 0 0.563rem;
+}
+section header .estatistica .temp div p {
+  color: #9aa0a6;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1rem;
+}
 section header .city {
   text-align: right;
+}
+section header .city h2 {
+  color: #e8eaed;
+  font-size: 1.375rem;
+  font-weight: 400;
+  line-height: 1.625rem;
+}
+section header .city p {
+  color: #9aa0a6;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.25rem;
 }
